improve manuscript: church

--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
@@ -515,26 +515,11 @@ tab_socializing_prosocial_behaviour_raw
 
 ## Introduction
 
-A central question in the scientific study of religion evokes cooperation. To address the causal claim proves remarkably difficult. To quantitatively evaluate whether religion makes people cooperative we would need to assess the counterfactual condition of whether religious people would be cooperative anyway without religion. Likewise, we would need to assess whether people who are not religious would be more (or less) cooperative had the adopted religion. The conterfactuals that we require to compute a causal effect are never available. Randomised controlled experiments can evaluate causality by quantifying average treatment effects. Thus although we can only observe outcomes for individuals under the treatments they received, because the individuals within treatment conditions are exchangeable by randomisation, we can be confident that any differences between the treatments owes to the interventions. However, it is challenging to randomise religion except at the margins. An additional challenge is heterogeneity in these causal effects of religion. Whether religions effects are constant across cultural and individual differences is particularly challenging to ascertain. To assess causality would require comparing outcomes across such diversity with counterfactual outcomes. Even if we could manipulate religion across the diversity of human forms it is unclear what the magnitudes of we quantify would tell us. This is setting aside fundamental problems of aligning concepts and measures. Which specifically aspects of religion do we wish to consider? Which specific measures of cooperation? 
+A central question in the scientific study of religion is whether religion causes cooperation. However, to quantitatively address this question is challenging. Core features of religion cannot are inaccessible to experiments. In observational data, the task of disentangling correlation from causation is formidable, for similar reasons.  Whether investigators have disentangled the specific causal effects of religion from background influences is a question that cannot be verified by the data. Moreover most studies that have investigated religion, even longitudinal studies, fall back on correlational models.
 
+Here, we leveraging the comprehensive panel data from the New Zealand Attitudes and Values Study from over thirty thousand New Zealanders in a nationally representative sample and use minimally restrictive, robust statistical models to investigate the specific effects of inverventions on religious service attendance on prosocial behaviors in three domeains:  charitable giving and volunteerism; (2) attitudes towards minorities, and (3) the reception of aid from the community. By distinguishing and quantifying the specific effects of commencing or discontinuing religious service attendance and comparing these effects to interventions on social engagement, we clarify the specific contributions of religious involvement to prosociality across a diverse, multi-culural western society. 
 
-Here, to address these limitations and provide a robust methodological framework for causal inference, we adopt the following strategies:
-
-1.  **Clarify the causal question:** prior to any analysis, it is crucial to explicitly define the causal question under scrutiny. Within the umbrella term of "pet ownership," multiple scenarios can be considered: coming to own a cat, coming to own a dog, coming to own other animals, parting with one or several types of pet, and so forth. Here, for the sake of causal clarity, we focus on two population average treatment effects: (a) the impact of acquiring cats and (b) the impact of acquiring dogs. Each scenario is conceptualised as a randomised experiment, contrasting a population that acquires the animal with one that does not. Effects are summarised for the population.
-
-2.  **Clearly define the target population**: the study's findings are intended to generalise to New Zealanders from the baseline wave 2015 of the New Zealand Attitudes and Values Study (NZAVS), who may have acquired or lost pets in the next available wave for which the NZAVS has measures of pet ownership: NZAVS wave 2019. We measure the outcomes as "intention-to-treat" effects in NZAVS wave 2020, and apply population weights from the New Zealand Census for year wave 2020 to obtain valid estimates for the New Zealand population in 2020-2021.
-
-3.  **Ensure correct temporal order in the variables**: the study's design incorporates a clear temporal structure for confounders and outcomes. Confounders are assessed prior to the treatment, negating the risk of post-treatment bias. Outcomes pertaining to well-being are evaluated after the treatment, thereby reducing the potential for reverse causation. This structure underpins the causal flow from pet ownership to well-being.
-
-4.  **Balance confounders**: once the temporal structure is set, we adjust for confounders that could distort the causal link between pet ownership and well-being. We employ doubly-robust methods using the `lmtp` package in R [@williams2021]. These methods amalgamate targeted machine learning models for both the treatment and the outcome variables. Being doubly robust, the analysis can recover consistent causal estimates even if either model is misspecified [@hoffman2023].
-
-5.  **Include of baseline measures of the treatment and outcome**: after confounder adjustment, we introduce baseline measures for both the treatment and the outcomes. This strategy serves two objectives: first, it augments control for confounding variables, and second, it permits differentiation between "incidence" and "prevalence" effects. *Incidence effects* capture the emergence of new cases or conditions among individuals who acquire pets during the study. This facilitates an evaluation of the causal impact of pet adoption on well-being among those who were not pet owners at the baseline.
-
-6.  **Assess multiple dimensions of well-being**: we use an outcomewide approach [@vanderweele2020] to assess well-being effects across multiple dimensions within the same study. This approach has several benefits. First we obtain *contextualised effects*: each outcome is evaluated in context relative to the others. This facilitates a better understanding of the importance of each individual effect within the overarching construct of well-being. Second, we *mitigate* of spurious findings: by assessing multiple outcomes simultaneously, we minimise the risk of cherry-picking cases that confirm a preconceived hypothesis, thereby reducing the likelihood of chance findings. Third, we *accelerate sientific understanding*: a comprehensive assessment can fast-track our scientific insights into the potential advantages and disadvantages of pet ownership on various aspects of human well-being. The selection of outcomes below are based on previous studies reflecting interest in the relationship between pet ownership and (1) health, (2) embodied well-being and distress, (3) reflective well-being and (4) social well-being.
-
-7.  **Obtain methodological precision through TMLE and machine learning**: to address the intrinsic limitations of non-randomised pet ownership, our study employs Targeted Maximum Likelihood Estimation (TMLE) coupled with machine learning techniques (the `SuperLearner` library in R [@polley2023]). These advanced methodological enhancement offer the following benefits. First, our approach *reduces model dependence*: TMLE allows for doubly-robust causal inference, reducing reliance on correct model specification. The method is robust even if either the treatment model (i.e., pet ownership) or the outcome model (i.e., well-being indicators) is incorrectly specified. Second, *machine Learning for confounder balancing improves precision* further refines our ability to balance confounders, particularly when these are high-dimensional or interact in complex ways. Flexible semi-parametric estimation of parameters that are of no intrinsic interest (the control variables) protects inference from model mis-specification [@díaz2021].
-
-Collectively, this approach help us to contribute to a deeper, more rigorous understanding of the causal relationship between cat or dog ownership and human well-being.(For further discussions of our approach, see: [@bulbulia2023a; @bulbulia2023; @bulbulia2022; @vanderweele2015; @hernan2023])
+Finally, we compute the economic value of religious service attendance on prosocial behaviors. This estimation provides a concrete measure of religious involvement's "cash value" in the New Zealand economy [@bulbulia2023a; @bulbulia2023; @bulbulia2022; @vanderweele2015; @hernan2023])
 
 ## Method
 
@@ -542,43 +527,33 @@ Collectively, this approach help us to contribute to a deeper, more rigorous und
 
 Data were collected as part of The New Zealand Attitudes and Values Study (NZAVS) is an annual longitudinal national probability panel study of social attitudes, personality, ideology and health outcomes. The NZAVS began in 2009. It includes questionnaire responses from more almost 70,000 New Zealand residents. The study includes researchers from many New Zealand universities, including the University of Auckland, Victoria University of Wellington, the University of Canterbury, the University of Otago, and Waikato University. Because the survey asks the same people to respond each year, it can track subtle change in attitudes and values over time, and is an important resource for researchers both in New Zealand and around the world. The NZAVS is university-based, not- for-profit and independent of political or corporate funding.https://doi.org/10.17605/OSF.IO/75SNB
 
-### Estimand 
+### Causal Contrast 
 
-**Objective**: we evaluate the causal effect of increased religious service attendance on pro-social behavior. Previous studies suggest attending religious services more frequently may foster greater pro-social behavior among individuals. To address causality, we investigate hypothetical intervention that would increase the frequency of monthly religious service attendance to a minimum threshold of weekly service attendance, contrasted against the natural course of attendance patterns.
+Here, we leverage panel data to estimate potential outcomes in a hypothetical world in which all individuals were attend at least four religious services per month (weekly) and contrast this estimates against outcomes against the natural values of the treatment observed in the data. 
 
-**Treatment ($A$)**: monthly religious service attendance, measured as the number of services attended per month.
+Thus whereas in standard causal inference, the average treatment effect is given as a simple contrast between the entire population when set to one of two causal contrast conditions: 
 
-**Outcome ($Y$)**: pro-social behavior, quantitatively assessed through in three domains: (1) self-reported behaviour: annual charitable donations, weekly volunteering; (2) prejudice/acceptance toward 12 minority groups; additionally evaluate self-reported religious prejudice; (3) help-recieved from others, a novel measure that minimises self-reporting bias; we evaluate help-received from family, from friends, and from the community.
+$$ \text{Average Treatment Effect} = E[Y(a*)|A,L] - E[Y(a)|A,L] $$
 
-**Covariates ($L$)**: baseline covariates include demographic characteristics, baseline religious service attendance, baseline measures of all outcomes, and variables that might affect the treatment and outcomes, such as work demands, number of children, number of siblings, and hours spent excercising and doing housework. 
-
-**Estimand**: in the present study causal question is addressed by estimating the difference between:
-
-- The expected outcomes under each shift function defined above by the function $f(A)$, and
-- The expected outcomes under the actual observed attendance/socalising patterns.
-
-Formally, the each target is given:
-
-$$ \Delta = E[Y(a*)|f(A),L] - E[Y(a)|A,L] $$
-
-Where $\Delta$ is the average treatment effect of a modified treatment policy.
+Our casusal estimand is takes a "shift function" or "modified treatment policy" such that: 
 
 
-**Intervention: shift function as gain of weekly religious service**: the intervention of interest is defined by a shift function applied to the treatment variable, designed to assess the effect of shifting the treatment on all outcomes examined in the study. The focal estimand shift function may be formally specified as:
+$$ \text{Average Treatment Effect} = E[Y(a*)|\textcolor{red}{f(A)},L] - E[Y(a)|A,L] $$
 
-$$f(A) = \begin{cases} 4 & \text{if } A \leq 4  \text{ monthly religious service attendance} \\ A & \text{if } A > 4  \text{ monthly religious service attendance} \end{cases} $$
+Where the intervention the treatment conditoin is defined by a shift function applied to the treatment variable, accross the entire study population. The functional can be stated
 
-Here, we estimate outcomes in a hypothetical world in which all individuals were attend at least four religious services per month (weekly).
-
-**Comparative intervention 1: shift function as loss of any religious service**: 
-
-Because the gain of religion might be different from the loss of religion, we additionally contrast the population average outcome were everyone to stop attending monthly religious service verse the expected outcome at the natural treatment values: 
-
-$$f(A) = 0 $$
-Here, we estimate outcomes in a hypothetical world in which no individuals attended religious service.
+$$f(A = a*) = \begin{cases} 4 & \text{if } A < 4  \text{ monthly religious service attendance} \\ \tilde{A} & \text{if } A \geq 4  \text{ monthly religious service attendance} \end{cases} $$
 
 
-**Comparative intervention 2: shift function of socialising at least two hours per week**
+
+Where $\tilde{A}$ is is computed the expected outcome when $A$ is set to its naturally occurring value such that
+
+$$\tilde{A} = A|L$$
+
+This same expression is given for the contrast condition, where $Y(a)|A,L$ is given as $Y(a)|\tilde{A}|L$ 
+
+
+**Comparative intervention: the causal effects of socialising at least two hours per week**
 
 For qualitative purposes, we performed an additional set of analyses investigating the causal effects of socialising across the three domains of prosociality that we considered for religious service:
 
@@ -592,6 +567,15 @@ $$f(A) = 0 $$
 We contrasted this expected values of this shift intervention with those of the naturally occurring expected outcome from socialising at the observed level, again focussing on cooperative behaviours.  
 
 We note that this contrast for socialising is does not afford a direct comparison with religious service attendance. In particular, one of the ways in which one socialises is by attending religious service. Volunteering is often, although not always, a social activity. However, these differences suggest a relatively conservative backdrop with which to compare religious service. If religious service effects, either positive or negative, were to appear relatively strong against this backdrop, we might infer that the effects of religious service comprised features unique to its religious elements. 
+
+#### Loss of religion and of socialing
+
+
+Because the gain of religion might be different from the loss of religion, we additionally contrast the population average outcome were everyone to stop attending monthly religious service verse the expected outcome at the natural treatment values: 
+
+$$f(A) = 0 $$
+
+Thus we estimated outcomes for a hypothetical world in which no individuals attended religious service, contrasting this with expected outcomes for the world as it observed. We conducted a parrallel analysis for socialisation. 
 
 
 ### Identification assumptions
@@ -626,19 +610,17 @@ The second step of TMLE involves "targeting" these initial estimates by incorpor
 
 A central feature of TMLE is its double-robustness property, meaning that if either the model for the treatment or the outcome is correctly specified, the TMLE estimator will still consistently estimate the causal effect. Additionally, TMLE uses cross-validation to avoid overfitting and ensure that the estimator performs well in finite samples. Each of these steps contributes to a robust methodology for examining the *causal* effects on of interventions on outcomes. The marriage of TMLE and machine learning technologies reduces the dependence on restrictive modelling assumptions and introduces an additional layer of robustness. For further details see [@hoffman2022; @hoffman2023; @díaz2021]
 
-
-
 ### Eligibility criteria for inclusion in the causal effects of shifting to a gain of weekly religious service attendance
 
 The sample consisted of respondents to NZAVS waves 2018 (baseline), 2019 (exposure wave), and 2020 (outcome wave) (years 2018-2021) (See Appendix A.)
 
-#### Inclusion Criteria
+#### Inclusion Criteria:
 
 -   Participants who provided full information about both religious service attendance and hours socialising at the baseline wave (NZAVS time 10, years 2018-10) and exposure wave (NZAVS wave 2019-20) were included.
 -   Missing data for all variables at baseline were allowed. Missing data at baseline were imputed through the `mice` package [@vanbuuren2018].
 -   Inverse probability of censoring weights were calculated as part of estimation in `lmtp` to adjust for missing outcomes at NZAVS Time 12 (years 2020-2021, the outcome wave).  This allow for adjustment owing to attition and loss to follow up (see details of the `lmtp` package [@williams2021])
 
-#### Exclusion Criteria
+##### Exluded 
 
 -   Participants who did not respond to the religious service attendance question at baseline or the exposure wave. 
 -   Participants who did not respond to the hours socialising question at baseline or the exposure wave. 
@@ -648,15 +630,15 @@ There were `r n_participants` NZAVS participants who met these criteria.
 
 ### Confounding control
 
-Effects should temporally succeed their causes. To circumvent reverse causation issues, outcomes were assessed in the year succeeding exposure, specifically the 2020 wave of the NZAVS. The causal diagram in @fig-outcomewide-dag outlines our approach to confounding control. We align with @vanderweele2020 in employing a *modified disjunctive cause criterion*, articulated as follows:
+Effects should temporally succeed their causes. To circumvent reverse causation issues, outcomes were assessed in the year succeeding exposure, specifically the 2020 wave of the NZAVS. The causal diagram in @fig-outcomewide-dag outlines our approach to confounding control. We align with @vanderweele2020 in employing a *modified disjunctive cause criterion*, as follows:
 
-1.  **Identify all relevant factors**: initially, enumerate all covariates affecting either the exposure or the outcomes across five domains, or both. These factors encompass variables influencing exposure or outcome and variables that could be consequences of such factors
+1.  **Identify all relevant confounders**: initially, enumerate all covariates affecting either the exposure or the outcomes across five domains, or both. These factors encompass variables influencing exposure or outcome and variables that could be consequences of such factors
 
 2.  **Remove instrumental variables**: subsequently, remove any factors identified as instrumental variables—factors influencing the exposure but not the outcome. The inclusion of instrumental variables diminishes efficiency.
 
 3.  **Include proxy variables for unmeasured common causes**: for unmeasured variables affecting both exposure and outcome, attempt to include a proxy variable. A proxy serves as a consequent of the unmeasured variable.
 
-4.  **Control for previous exposure**: accounting for prior exposure is imperative for assessing incident exposure as opposed to prevalent exposure. This step enhances confounding control and aids in sidestepping reverse causation and other unmeasured confounders. This ensures that any unmeasured confounder would need to affect both the outcome and the initial exposure, regardless of prior exposure levels, to account for an observed exposure-outcome association [@danaei2012; @hernan2023].
+4.  **Control for baseline exposure**: accounting for prior exposure is imperative for assessing incident exposure as opposed to prevalent exposure. This step enhances confounding control and aids in sidestepping reverse causation and other unmeasured confounders. This ensures that any unmeasured confounder would need to affect both the outcome and the initial exposure, regardless of prior exposure levels, to account for an observed exposure-outcome association [@danaei2012; @hernan2023].
 
 5.  **Control for baseline outcome**: controlling for the outcome at baseline is crucial for ruling out reverse causation. While this does not fully preclude reverse causation, it minimises its impact. Therefore, the baseline outcome, along with a comprehensive set of covariates, should be part of the model to render the confounding control assumption plausible. The baseline outcome often serves as the most potent confounder affecting both the exposure and subsequent outcome [@vanderweele2020].
 
@@ -664,49 +646,9 @@ To mitigate bias from missing data due to non-response or panel attrition, we im
 
 
 
-
 ### Study 2: socialising 
 
-```{r}
-#| label: verify-positivity-data-dogs
-#| eval: false
-#| echo: false
-
-# transition_table_socialising
-# transition_table_socialising_shift
-```
-
-@tbl-transition-socialising shows a transition matrix captures the movement between weekly hours socialising during the baseline (NZAVS time 10) wave and exposure wave (NZAVS time 11). Entries on the diagonal (in bold) indicate the number of individuals who stayed in their initial state. In contrast, the off-diagonal shows the transitions from the initial state (bold) to another state the following wave (off diagnal). Again, a cell located at the intersection of row $i$ and column $j$, where $i \neq j$, shows the count of individuals moving from state $i$ to state $j$.
-
-|  From   |  State 0  | State 1  | State 2 | State 3 | State 4 | State 5 | State 6 | State 7 | State 8 |
-|:-------:|:---------:|:--------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|
-| State 0 | **20039** |   2243   |  1192   |   221   |   25    |   12    |    7    |    3    |    6    |
-| State 1 |   2288    | **1389** |   731   |   103   |   11    |    4    |    3    |    0    |    0    |
-| State 2 |   1328    |   660    | **806** |   161   |   29    |    6    |    2    |    1    |    2    |
-| State 3 |    236    |   101    |   151   | **76**  |   17    |    5    |    1    |    0    |    0    |
-| State 4 |    55     |    16    |   32    |   17    | **11**  |    3    |    1    |    2    |    0    |
-| State 5 |    16     |    5     |    8    |    4    |    3    |  **0**  |    1    |    0    |    0    |
-| State 6 |     8     |    1     |    0    |    0    |    1    |    0    |  **0**  |    0    |    1    |
-| State 7 |     3     |    1     |    1    |    1    |    0    |    0    |    0    |  **0**  |    0    |
-| State 8 |     3     |    1     |    1    |    1    |    1    |    0    |    0    |    0    |  **1**  |
-
-: Transition matrix for change in the square of hours socialing with community each week {#tbl-transition-socialising}
-
-
-
-@@tbl-transition-socialising presents a summary of changes in socialising at the threshold that we compared. When shifting to socialising at least 1.4 hours per week, we imagine 'treating' 25,959 cases. Again this table is for illustration, as the the shift intervention allows us to flexibly contrast cases without projecting the entire population in to one or another cell.  
-
-
-|        From         | < 1.4 weekly hours | >= 1.4 weekly hours |
-|:-------------------:|:------------------:|:-------------------:|
-| < 1.4 weekly hours  |     **25959**      |        2318         |
-| >= 1.4 weekly hours |        2434        |      **1347**       |
-
-: Transition matrix for change in the square of hours socialing with community each week {#tbl-transition-socialising-shift}
-
-
-
-### Multi-dimensional indicators of well-being
+### Multi-dimensional indicators of prosociality
 
 We assessed well-being following @vanderweele2020 outcome-wide template. Outcomewide studies argue that, rather than cherry-picking one or several domains of well-being, science may advance more rapidly, and with greater hope for replication, by assess well-being across as many range of indicators the data may afford. To assist with interpretation, @vanderweele2020 groups well-being into larger dimensions of interest. Here, we identify five-domains: health, embodied well-being, practical well-being, reflective well-being, and social well-being (see Appendix C.)
 
@@ -1002,6 +944,49 @@ For the outcome 'Warm Chinese: weekly church >= 1', the PATE causal contrast is 
 For the outcome 'Warm Muslims: weekly church >= 1', the PATE causal contrast is 0.03. The confidence interval ranges from 0 to 0.06. The E-value for this outcome is 1.196, indicating evidence for causality is weak.
 
 {{< pagebreak >}}
+
+
+### Socialisation 
+
+
+```{r}
+#| label: verify-positivity-data-dogs
+#| eval: false
+#| echo: false
+
+# transition_table_socialising
+# transition_table_socialising_shift
+```
+
+@tbl-transition-socialising shows a transition matrix captures the movement between weekly hours socialising during the baseline (NZAVS time 10) wave and exposure wave (NZAVS time 11). Entries on the diagonal (in bold) indicate the number of individuals who stayed in their initial state. In contrast, the off-diagonal shows the transitions from the initial state (bold) to another state the following wave (off diagnal). Again, a cell located at the intersection of row $i$ and column $j$, where $i \neq j$, shows the count of individuals moving from state $i$ to state $j$.
+
+|  From   |  State 0  | State 1  | State 2 | State 3 | State 4 | State 5 | State 6 | State 7 | State 8 |
+|:-------:|:---------:|:--------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|
+| State 0 | **20039** |   2243   |  1192   |   221   |   25    |   12    |    7    |    3    |    6    |
+| State 1 |   2288    | **1389** |   731   |   103   |   11    |    4    |    3    |    0    |    0    |
+| State 2 |   1328    |   660    | **806** |   161   |   29    |    6    |    2    |    1    |    2    |
+| State 3 |    236    |   101    |   151   | **76**  |   17    |    5    |    1    |    0    |    0    |
+| State 4 |    55     |    16    |   32    |   17    | **11**  |    3    |    1    |    2    |    0    |
+| State 5 |    16     |    5     |    8    |    4    |    3    |  **0**  |    1    |    0    |    0    |
+| State 6 |     8     |    1     |    0    |    0    |    1    |    0    |  **0**  |    0    |    1    |
+| State 7 |     3     |    1     |    1    |    1    |    0    |    0    |    0    |  **0**  |    0    |
+| State 8 |     3     |    1     |    1    |    1    |    1    |    0    |    0    |    0    |  **1**  |
+
+: Transition matrix for change in the square of hours socialing with community each week {#tbl-transition-socialising}
+
+
+
+@@tbl-transition-socialising presents a summary of changes in socialising at the threshold that we compared. When shifting to socialising at least 1.4 hours per week, we imagine 'treating' 25,959 cases. Again this table is for illustration, as the the shift intervention allows us to flexibly contrast cases without projecting the entire population in to one or another cell.  
+
+
+|        From         | < 1.4 weekly hours | >= 1.4 weekly hours |
+|:-------------------:|:------------------:|:-------------------:|
+| < 1.4 weekly hours  |     **25959**      |        2318         |
+| >= 1.4 weekly hours |        2434        |      **1347**       |
+
+: Transition matrix for change in the square of hours socialing with community each week {#tbl-transition-socialising-shift}
+
+
 
 ### Summary of findings
 
