--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.tex
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.tex
@@ -173,7 +173,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Causal effect of religious service attendance on cooperation: and outcome-wide study},
+  pdftitle={Causal effect of religious service attendance on charitable donations and volunteering, minority-group-attitudes, and help-received: evidence from a national panel study},
   pdfauthor={Joseph A. Bulbulia; Chris G. Sibley},
   pdfkeywords={Causal
 Inference, Charity, Church, Cooperation, Religion, Shift
@@ -185,152 +185,75 @@ Intervention, Volunteering},
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Causal effect of religious service attendance on cooperation: and
-outcome-wide study}
+\title{Causal effect of religious service attendance on charitable
+donations and volunteering, minority-group-attitudes, and help-received:
+evidence from a national panel study}
 \author{Joseph A. Bulbulia \and Chris G. Sibley}
-\date{2024-02-06}
+\date{2024-02-07}
 
 \begin{document}
 \maketitle
 \begin{abstract}
-This study investigates the causal effects of religious service
-attendance on cooperation. It combines panel data from a nationally
-diverse longitudional study of New Zealanders, the New Zealand Attitudes
-and Values Study (NZAVS, years 2018-2021) with robust methods for causal
-inference. We investigate three domains of behaviour: (1) self reported
-charity and volunteering (2) prejudice/acceptance (3) help-recieved from
-others (a novel measure). Our framework incorporates targeted machine
-learning models to balance confounders and doubly-robust methods for
-causal estimation, utilising Targeted Maximum Likelihood Estimation
-(TMLE). We find that \ldots{} .
+This study employs panel data from the New Zealand Attitudes and Values
+Study, a longitudinal survey of 30,000 New Zealanders, to examine the
+causal impact of religious service attendance on prosocial behaviors
+across three dimensions: charitable donations and volunteering,
+attitudes towards minority groups (``warmth''), and help received from
+others---a novel metric. Our analysis distinguishes between the effects
+of initiating weekly religious service attendance for non-attendees and
+ceasing any religious participation. Additionally, we conduct a parallel
+comparison with a general shifts in community social engagement to
+discern the unique contributions of religious service to prosociality.
+\textbf{Charitable Donations and Volunteering}: Findings indicate that
+regular attendance at religious services increases annual charitable
+donations by approximately \$700 per adult, without a corresponding
+effect from general social engagement. Both activities, however,
+similarly elevate volunteering rates. \textbf{Prejudice Reduction}:
+Attendance at religious services enhances warmth towards all social
+groupsl. In contrast, general social engagement only reliably improves
+attitudes towards Māori, New Zealand's largest minority group.
+\textbf{Help Received}: Engagement in regular religious services leads
+to increased community support, but not too greater support from family
+and friends. Conversely, general social engagement boosts support from
+family and friends but not from the community. The discontinuation of
+any religious service attendance results in reduced volunteering but
+does not affect charitable donations, suggesting that religious service
+may foster enduring charitable habits. In summary, acquiring religious
+service attendance enhances charitable giving and reduces prejudice more
+effectively than mere social engagement, with the cessation of religious
+services demonstrating distinct outcomes. This supports theories
+proposing that religious involvement cultivates charitable dispositions.
 \end{abstract}
 
 \subsection{Introduction}\label{introduction}
 
-A central question in the scientific study of religion evokes
-cooperation. To address the causal claim proves remarkably difficult. To
-quantitatively evaluate whether religion makes people cooperative we
-would need to assess the counterfactual condition of whether religious
-people would be cooperative anyway without religion. Likewise, we would
-need to assess whether people who are not religious would be more (or
-less) cooperative had the adopted religion. The conterfactuals that we
-require to compute a causal effect are never available. Randomised
-controlled experiments can evaluate causality by quantifying average
-treatment effects. Thus although we can only observe outcomes for
-individuals under the treatments they received, because the individuals
-within treatment conditions are exchangeable by randomisation, we can be
-confident that any differences between the treatments owes to the
-interventions. However, it is challenging to randomise religion except
-at the margins. An additional challenge is heterogeneity in these causal
-effects of religion. Whether religions effects are constant across
-cultural and individual differences is particularly challenging to
-ascertain. To assess causality would require comparing outcomes across
-such diversity with counterfactual outcomes. Even if we could manipulate
-religion across the diversity of human forms it is unclear what the
-magnitudes of we quantify would tell us. This is setting aside
-fundamental problems of aligning concepts and measures. Which
-specifically aspects of religion do we wish to consider? Which specific
-measures of cooperation?
+A central question in the scientific study of religion is whether
+religion causes cooperation. However, to quantitatively address this
+question is challenging. Core features of religion cannot are
+inaccessible to experiments. In observational data, the task of
+disentangling correlation from causation is formidable, for similar
+reasons. Whether investigators have disentangled the specific causal
+effects of religion from background influences is a question that cannot
+be verified by the data. Moreover most studies that have investigated
+religion, even longitudinal studies, fall back on correlational models.
 
-Here, to address these limitations and provide a robust methodological
-framework for causal inference, we adopt the following strategies:
+Here, we leveraging the comprehensive panel data from the New Zealand
+Attitudes and Values Study from over thirty thousand New Zealanders in a
+nationally representative sample and use minimally restrictive, robust
+statistical models to investigate the specific effects of inverventions
+on religious service attendance on prosocial behaviors in three
+domeains: charitable giving and volunteerism; (2) attitudes towards
+minorities, and (3) the reception of aid from the community. By
+distinguishing and quantifying the specific effects of commencing or
+discontinuing religious service attendance and comparing these effects
+to interventions on social engagement, we clarify the specific
+contributions of religious involvement to prosociality across a diverse,
+multi-culural western society.
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\item
-  \textbf{Clarify the causal question:} prior to any analysis, it is
-  crucial to explicitly define the causal question under scrutiny.
-  Within the umbrella term of ``pet ownership,'' multiple scenarios can
-  be considered: coming to own a cat, coming to own a dog, coming to own
-  other animals, parting with one or several types of pet, and so forth.
-  Here, for the sake of causal clarity, we focus on two population
-  average treatment effects: (a) the impact of acquiring cats and (b)
-  the impact of acquiring dogs. Each scenario is conceptualised as a
-  randomised experiment, contrasting a population that acquires the
-  animal with one that does not. Effects are summarised for the
-  population.
-\item
-  \textbf{Clearly define the target population}: the study's findings
-  are intended to generalise to New Zealanders from the baseline wave
-  2015 of the New Zealand Attitudes and Values Study (NZAVS), who may
-  have acquired or lost pets in the next available wave for which the
-  NZAVS has measures of pet ownership: NZAVS wave 2019. We measure the
-  outcomes as ``intention-to-treat'' effects in NZAVS wave 2020, and
-  apply population weights from the New Zealand Census for year wave
-  2020 to obtain valid estimates for the New Zealand population in
-  2020-2021.
-\item
-  \textbf{Ensure correct temporal order in the variables}: the study's
-  design incorporates a clear temporal structure for confounders and
-  outcomes. Confounders are assessed prior to the treatment, negating
-  the risk of post-treatment bias. Outcomes pertaining to well-being are
-  evaluated after the treatment, thereby reducing the potential for
-  reverse causation. This structure underpins the causal flow from pet
-  ownership to well-being.
-\item
-  \textbf{Balance confounders}: once the temporal structure is set, we
-  adjust for confounders that could distort the causal link between pet
-  ownership and well-being. We employ doubly-robust methods using the
-  \texttt{lmtp} package in R (\citeproc{ref-williams2021}{Williams and
-  Díaz 2021}). These methods amalgamate targeted machine learning models
-  for both the treatment and the outcome variables. Being doubly robust,
-  the analysis can recover consistent causal estimates even if either
-  model is misspecified (\citeproc{ref-hoffman2023}{Hoffman \emph{et
-  al.} 2023}).
-\item
-  \textbf{Include of baseline measures of the treatment and outcome}:
-  after confounder adjustment, we introduce baseline measures for both
-  the treatment and the outcomes. This strategy serves two objectives:
-  first, it augments control for confounding variables, and second, it
-  permits differentiation between ``incidence'' and ``prevalence''
-  effects. \emph{Incidence effects} capture the emergence of new cases
-  or conditions among individuals who acquire pets during the study.
-  This facilitates an evaluation of the causal impact of pet adoption on
-  well-being among those who were not pet owners at the baseline.
-\item
-  \textbf{Assess multiple dimensions of well-being}: we use an
-  outcomewide approach (\citeproc{ref-vanderweele2020}{VanderWeele
-  \emph{et al.} 2020}) to assess well-being effects across multiple
-  dimensions within the same study. This approach has several benefits.
-  First we obtain \emph{contextualised effects}: each outcome is
-  evaluated in context relative to the others. This facilitates a better
-  understanding of the importance of each individual effect within the
-  overarching construct of well-being. Second, we \emph{mitigate} of
-  spurious findings: by assessing multiple outcomes simultaneously, we
-  minimise the risk of cherry-picking cases that confirm a preconceived
-  hypothesis, thereby reducing the likelihood of chance findings. Third,
-  we \emph{accelerate sientific understanding}: a comprehensive
-  assessment can fast-track our scientific insights into the potential
-  advantages and disadvantages of pet ownership on various aspects of
-  human well-being. The selection of outcomes below are based on
-  previous studies reflecting interest in the relationship between pet
-  ownership and (1) health, (2) embodied well-being and distress, (3)
-  reflective well-being and (4) social well-being.
-\item
-  \textbf{Obtain methodological precision through TMLE and machine
-  learning}: to address the intrinsic limitations of non-randomised pet
-  ownership, our study employs Targeted Maximum Likelihood Estimation
-  (TMLE) coupled with machine learning techniques (the
-  \texttt{SuperLearner} library in R (\citeproc{ref-polley2023}{Polley
-  \emph{et al.} 2023})). These advanced methodological enhancement offer
-  the following benefits. First, our approach \emph{reduces model
-  dependence}: TMLE allows for doubly-robust causal inference, reducing
-  reliance on correct model specification. The method is robust even if
-  either the treatment model (i.e., pet ownership) or the outcome model
-  (i.e., well-being indicators) is incorrectly specified. Second,
-  \emph{machine Learning for confounder balancing improves precision}
-  further refines our ability to balance confounders, particularly when
-  these are high-dimensional or interact in complex ways. Flexible
-  semi-parametric estimation of parameters that are of no intrinsic
-  interest (the control variables) protects inference from model
-  mis-specification (\citeproc{ref-duxedaz2021}{Díaz \emph{et al.}
-  2021}).
-\end{enumerate}
-
-Collectively, this approach help us to contribute to a deeper, more
-rigorous understanding of the causal relationship between cat or dog
-ownership and human well-being.(For further discussions of our approach,
-see: (\citeproc{ref-bulbulia2022}{Bulbulia 2022};
+Finally, we compute the economic value of religious service attendance
+on prosocial behaviors. This estimation provides a concrete measure of
+religious involvement's ``cash value'' in the New Zealand economy
+(\citeproc{ref-bulbulia2022}{Bulbulia 2022};
 \citeproc{ref-bulbulia2023a}{Bulbulia \emph{et al.} 2023};
 \citeproc{ref-bulbulia2023}{Bulbulia 2023};
 \citeproc{ref-hernan2023}{Hernan and Robins 2023};
@@ -354,65 +277,34 @@ researchers both in New Zealand and around the world. The NZAVS is
 university-based, not- for-profit and independent of political or
 corporate funding.https://doi.org/10.17605/OSF.IO/75SNB
 
-\subsubsection{Estimand}\label{estimand}
+\subsubsection{Causal Contrast}\label{causal-contrast}
 
-\textbf{Objective}: we evaluate the causal effect of increased religious
-service attendance on pro-social behavior. Previous studies suggest
-attending religious services more frequently may foster greater
-pro-social behavior among individuals. To address causality, we
-investigate hypothetical intervention that would increase the frequency
-of monthly religious service attendance to a minimum threshold of weekly
-service attendance, contrasted against the natural course of attendance
-patterns.
+Here, we leverage panel data to estimate potential outcomes in a
+hypothetical world in which all individuals were attend at least four
+religious services per month (weekly) and contrast this estimates
+against outcomes against the natural values of the treatment observed in
+the data.
 
-\textbf{Treatment (\(A\))}: monthly religious service attendance,
-measured as the number of services attended per month.
+Thus whereas in standard causal inference, the average treatment effect
+is given as a simple contrast between the entire population when set to
+one of two causal contrast conditions:
 
-\textbf{Outcome (\(Y\))}: pro-social behavior, quantitatively assessed
-through in three domains: (1) self-reported behaviour: annual charitable
-donations, weekly volunteering; (2) prejudice/acceptance toward 12
-minority groups; additionally evaluate self-reported religious
-prejudice; (3) help-recieved from others, a novel measure that minimises
-self-reporting bias; we evaluate help-received from family, from
-friends, and from the community.
+\[ \text{Average Treatment Effect} = E[Y(a*)|A,L] - E[Y(a)|A,L] \]
 
-\textbf{Covariates (\(L\))}: baseline covariates include demographic
-characteristics, baseline religious service attendance, baseline
-measures of all outcomes, and variables that might affect the treatment
-and outcomes, such as work demands, number of children, number of
-siblings, and hours spent excercising and doing housework.
+Our casusal estimand is takes a ``shift function'' or ``modified
+treatment policy'' such that:
 
-\textbf{Estimand}: in the present study causal question is addressed by
-estimating the difference between:
+\[ \text{Average Treatment Effect} = E[Y(a*)|\textcolor{red}{f(A)},L] - E[Y(a)|A,L] \]
 
-\begin{itemize}
-\tightlist
-\item
-  The expected outcomes under each shift function defined above by the
-  function \(f(A)\), and
-\item
-  The expected outcomes under the actual observed attendance/socalising
-  patterns.
-\end{itemize}
+Where the intervention the treatment conditoin is defined by a shift
+function applied to the treatment variable, accross the entire study
+population. The functional can be stated
 
-Formally, the each target is given:
+\[f(A = a*) = \begin{cases} 4 & \text{if } A < 4  \text{ monthly religious service attendance} \\ \tilde{A} & \text{if } A \geq 4  \text{ monthly religious service attendance} \end{cases} \]
 
-\[ \Delta = E[Y(a*)|f(A),L] - E[Y(a)|A,L] \]
-
-Where \(\Delta\) is the average treatment effect of a modified treatment
-policy.
-
-\textbf{Intervention: shift function as gain of weekly religious
-service}: the intervention of interest is defined by a shift function
-applied to the treatment variable, designed to assess the effect of
-shifting the treatment on all outcomes examined in the study. The focal
-estimand shift function may be formally specified as:
-
-\[f(A) = \begin{cases} 4 & \text{if } A \leq 4  \text{ monthly religious service attendance} \\ A & \text{if } A > 4  \text{ monthly religious service attendance} \end{cases} \]
-
-Here, we estimate outcomes in a hypothetical world in which all
-individuals were attend at least four religious services per month
-(weekly).
+The contrast \(Y|A=a\) in the contrast condition is computed the
+expected outcome when \(A\) is set to its naturally occurring value
+\(\tilde{A = a}\)
 
 \textbf{Comparative intervention 1: shift function as loss of any
 religious service}:
@@ -1582,11 +1474,6 @@ doi:\href{https://doi.org/10.1001/jamanetworkopen.2022.34425}{10.1001/jamanetwor
 Jost, JT (2006) The end of the end of ideology. \emph{American
 Psychologist}, \textbf{61}(7), 651--670.
 doi:\href{https://doi.org/10.1037/0003-066X.61.7.651}{10.1037/0003-066X.61.7.651}.
-
-\bibitem[\citeproctext]{ref-polley2023}
-Polley, E, LeDell, E, Kennedy, C, and Laan, M van der (2023)
-\emph{SuperLearner: Super learner prediction}. Retrieved from
-\url{https://CRAN.R-project.org/package=SuperLearner}
 
 \bibitem[\citeproctext]{ref-sibley2011}
 Sibley, CG, Luyten, N, Purnomo, M, \ldots{} Robertson, A (2011) The
