--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
@@ -189,16 +189,215 @@ graph_density_of_exposure_socialising<- here_read("graph_density_of_exposure_soc
 # church outcomes
 
 # self reported behaviour 
-tab_compare_church_prosocial_behaviour_z<- here_read("tab_compare_church_prosocial_behaviour_z")
+# tab_compare_church_prosocial_behaviour_z<- here_read("tab_compare_church_prosocial_behaviour_z")
+# tab_compare_church_prosocial_behaviour_raw<- here_read("tab_compare_church_prosocial_behaviour_raw")
+# tab_compare_church_LOSS_prosocial_behaviour_z<- here_read("tab_compare_church_LOSS_prosocial_behaviour_z")
+# tab_compare_church_LOSS_prosocial_behaviour_raw<- here_read("tab_compare_church_LOSS_prosocial_behaviour_raw")
+# 
+
+
+#### USE THIS #####
+# gain
 tab_compare_church_prosocial_behaviour_raw<- here_read("tab_compare_church_prosocial_behaviour_raw")
-tab_compare_church_LOSS_prosocial_behaviour_z<- here_read("tab_compare_church_LOSS_prosocial_behaviour_z")
-tab_compare_church_LOSS_prosocial_behaviour_raw<- here_read("tab_compare_church_LOSS_prosocial_behaviour_raw")
+tab_compare_church_prosocial_behaviour_z<- here_read("tab_compare_church_prosocial_behaviour_z")
 
 
-group_tab_compare_church_prosocial_behaviour_raw<- here_read("group_tab_compare_church_prosocial_behaviour_raw")
-group_tab_compare_church_LOSS_prosocial_behaviour_z<- here_read("group_tab_compare_church_LOSS_prosocial_behaviour_z")
 group_tab_compare_church_prosocial_behaviour_z<- here_read("group_tab_compare_church_prosocial_behaviour_z")
-group_tab_compare_church_LOSS_prosocial_behaviour_raw<- here_read("group_tab_compare_church_LOSS_prosocial_behaviour_raw")
+group_tab_compare_church_prosocial_behaviour_raw<- here_read("group_tab_compare_church_prosocial_behaviour_raw")
+
+#Loss
+tab_compare_church_prosocial_behaviour_raw<- here_read("tab_compare_church_prosocial_behaviour_raw")
+tab_compare_church_prosocial_behaviour_z_loss<- here_read("tab_compare_church_prosocial_behaviour_z_loss")
+
+group_tab_compare_church_prosocial_behaviour_z_loss<- here_read("group_tab_compare_church_prosocial_behaviour_z_loss")
+group_tab_compare_church_prosocial_behaviour_loss_raw <- group_tab(tab_compare_church_prosocial_behaviour_loss_raw, type = "RD")
+
+
+### SOCIALISING GAIN PROSOCIAL
+tab_socializing_prosocial_behaviour_z<- here_read("tab_socializing_prosocial_behaviour_z")
+group_tab_socializing_prosocial_behaviour_z<- here_read("group_tab_socializing_prosocial_behaviour_z")
+
+
+tab_socializing_prosocial_behaviour_loss_z
+tab_socializing_prosocial_behaviour_loss_raw
+
+plot_socializing_prosocial<- margot_plot(
+  group_tab_socializing_prosocial_behaviour_z,
+  type = "RD",
+  title = "Socialising effect on charity",
+  subtitle = ">= 1.4  x weekly hours socialising",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_socializing_prosocial
+
+
+ggsave(
+  plot_socializing_prosocial,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_socializing_prosocial.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+
+
+
+### LOSS SOCIALISING RAW
+tab_socializing_prosocial_behaviour_loss_raw<- here_read("tab_socializing_prosocial_behaviour_loss_raw")
+group_tab_socializing_prosocial_behaviour_loss_raw<- here_read("group_tab_socializing_prosocial_behaviour_loss_raw")
+tab_socializing_prosocial_behaviour_loss_raw
+
+### LOSS SOCIALISING  Z
+
+tab_socializing_prosocial_behaviour_loss_z<- here_read("tab_socializing_prosocial_behaviour_loss_z")
+group_tab_socializing_prosocial_behaviour_loss_z<- here_read("group_tab_socializing_prosocial_behaviour_loss_z")
+group_tab_socializing_prosocial_behaviour_loss_z
+plot_socializing_prosocial_loss_z<- margot_plot(
+  group_tab_socializing_prosocial_behaviour_loss_z,
+  type = "RD",
+  title = "Socialising effect on charity",
+  subtitle = "any community socialising lost",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_socializing_prosocial_loss_z + plot_socializing_prosocial
+
+
+
+### SOCIALISING GAIN PREJUDICE
+# ALERT: GRAPHS WARMTH SOCIALISING ----------------------------------------
+tab_warm_socialising<- here_read("tab_warm_socialising")
+group_tab_warm_warm_socialising <- here_read("group_tab_warm_socialising")
+tab_warm_socialising
+group_tab_warm_warm_socialising
+plot_warm_socialising <- margot_plot(
+  group_tab_warm_warm_socialising,
+  type = "RD",
+  title = "Socialing effect on prejudice/acceptance",
+  subtitle = ">= 1.4  x weekly hours socialising",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_warm_socialising
+
+ggsave(
+  plot_warm_socialising,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_warm_socialising.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+
+
+
+
+
+### SOCIALISING LOSS PREJUDICE
+
+
+tab_warm_socialising_loss<- here_read("tab_warm_socialising_loss")
+group_tab_warm_socialising_loss<- here_read("group_tab_warm_socialising_loss")
+plot_warm_socialising_loss <- margot_plot(
+  group_tab_warm_socialising_loss,
+  type = "RD",
+  title = "Socialing effect on prejudice/acceptance",
+  subtitle = "Any socialising lost",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_warm_socialising_loss
+
+ggsave(
+  plot_warm_socialising_loss,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_warm_socialising_loss.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+plot_warm_socialising + plot_warm_socialising_loss
+
+
+### SOCIALISING GAIN HELP RECEIVED
+
+
+
+### SOCIALISING LOSS HELP RECEIVED
+
+
+
+
+#### END USE THIS #####
+
+#Loss
+# tab_compare_church_prosocial_behaviour_raw<- here_read("tab_compare_church_prosocial_behaviour_raw")
+# tab_compare_church_prosocial_behaviour_z_loss<- here_read("tab_compare_church_prosocial_behaviour_z_loss")
+# group_tab_compare_church_prosocial_behaviour_z_loss<- here_read("group_tab_compare_church_prosocial_behaviour_z_loss")
+# group_tab_compare_church_prosocial_behaviour_loss_raw <- group_tab(tab_compare_church_prosocial_behaviour_loss_raw, type = "RD")
+# 
+# group_tab_compare_church_prosocial_behaviour_raw<- here_read("group_tab_compare_church_prosocial_behaviour_raw")
+# group_tab_compare_church_LOSS_prosocial_behaviour_z<- here_read("group_tab_compare_church_LOSS_prosocial_behaviour_z")
+# group_tab_compare_church_prosocial_behaviour_z<- here_read("group_tab_compare_church_prosocial_behaviour_z")
+# group_tab_compare_church_LOSS_prosocial_behaviour_raw<- here_read("group_tab_compare_church_LOSS_prosocial_behaviour_raw")
 
 # RESULT OBJECTS 
 # group_tab_compare_church_prosocial_behaviour_z
@@ -207,12 +406,11 @@ group_tab_compare_church_LOSS_prosocial_behaviour_raw<- here_read("group_tab_com
 # group_tab_compare_church_LOSS_prosocial_behaviour_raw
 
 
-
 plot_church_prosocial <- margot_plot(
   group_tab_compare_church_prosocial_behaviour_z,
   type = "RD",
   title = "Religious service effect on reported donations and volunteering",
-  subtitle = ">= 1 x weekly service attendance",
+  subtitle = ">= 1 x weekly religious service attendance",
   xlab = "",
   ylab = "",
   estimate_scale = 1,
@@ -232,10 +430,10 @@ plot_church_prosocial
 
 
 plot_church_LOSS_prosocial <- margot_plot(
-  group_tab_compare_church_LOSS_prosocial_behaviour_z,
+  group_tab_compare_church_prosocial_behaviour_z_loss,
   type = "RD",
   title = "Religious service loss on reported donations and volunteering",
-  subtitle = "loss of any service attendance",
+  subtitle = "Lose any service attendance",
   xlab = "",
   ylab = "",
   estimate_scale = 1,
@@ -263,7 +461,7 @@ plot_church_prejudice  <- margot_plot(
   group_tab_compare_church_prejudice_z,
   type = "RD",
   title = "Religious service effect on prejudice/acceptance",
-  subtitle = ">= 1 x weekly service attendance",
+  subtitle = ">= 1 x weekly religious service attendance",
   xlab = "",
   ylab = "",
   estimate_scale = 1,
@@ -295,6 +493,130 @@ plot_church_prejudice
 
 
 
+## loss church on prosocial behaviour
+tab_compare_church_prosocial_behaviour_z_loss<- here_read("tab_compare_church_prosocial_behaviour_z_loss")
+tab_compare_church_prosocial_behaviour_loss_raw<- here_read("tab_compare_church_prosocial_behaviour_loss_raw")
+group_tab_compare_church_prosocial_behaviour_loss_raw<- here_read("group_tab_compare_church_prosocial_behaviour_loss_raw")
+group_tab_compare_church_prosocial_behaviour_z_loss<- here_read("group_tab_compare_church_prosocial_behaviour_z_loss")
+
+
+plot_church_prosocial_loss <- margot_plot(
+  group_tab_compare_church_prosocial_behaviour_z_loss,
+  type = "RD",
+  title = "Religious service effect on reported donations and volunteering",
+  subtitle = "Lose any religious service",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_church_prosocial_loss
+# 
+ggsave(
+  plot_church_prosocial_loss,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_church_prosocial_loss.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+
+
+
+plot_charity_church_z_loss <- margot_plot(
+  group_tab_compare_church_prosocial_behaviour_z_loss,
+  type = "RD",
+  title = "Religious service effect on reported donations and volunteering",
+  subtitle = "Lose any religious service",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_charity_church_z_loss
+# 
+ggsave(
+  plot_charity_church_z_loss,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_charity_church_z_loss.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+
+
+
+
+
+## LOSE CHURCH ON PREJUDICE
+tab_warm_church_loss <- here_read("tab_warm_church_loss")
+tab_warm_church_loss
+group_tab_warm_church_loss <- here_read("group_tab_warm_church_loss")
+group_tab_warm_church_loss
+
+
+group_tab_warm_church_loss <- here_read("group_tab_warm_church_loss")
+
+plot_prejudice_church_loss <- margot_plot(
+  group_tab_warm_church_loss,
+  type = "RD",
+  title = "Religious service effect on prejudice/acceptance",
+  subtitle = "Lose any religious service",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_prejudice_church_loss
+
+ggsave(
+  plot_prejudice_church_loss,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename ="plot_prejudice_church_loss.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+
 
 # HELP RECEIVED
 tab_church_help_received <- here_read('tab_church_help_received')
@@ -310,7 +632,7 @@ plot_church_help_received <- margot_plot(
   group_tab_church_help_received,
   type = "RR",
   title = "Religious service effect on help received",
-  subtitle = ">= 1 x weekly service attendance",
+  subtitle = ">= 1 x weekly religious service attendance",
   xlab = "",
   ylab = "",
   estimate_scale = 1,
@@ -327,6 +649,48 @@ plot_church_help_received <- margot_plot(
 )
 
 #plot_church_help_received
+
+
+### Loss religious service on help received
+# graph
+tab_church_help_received_loss <- here_read('tab_church_help_received_loss')
+group_tab_church_help_received_loss <- here_read("group_tab_church_help_received_loss")
+
+plot_group_tab_time_church_loss <- margot_plot(
+  group_tab_church_help_received_loss,
+  type = "RR",
+  title = "Religious service effect on help received",
+  subtitle = "Lose any religious service",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = 0,
+  x_lim_lo = 0,
+  x_lim_hi =  2
+)
+
+plot_group_tab_time_church_loss
+
+
+ggsave(
+  plot_group_tab_time_church_loss,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_group_tab_time_church_loss.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+
 
 ######################
 ### SOCIALISING 
@@ -406,8 +770,81 @@ plot_warm_socialising <- margot_plot(
 
 # plot_warm_socialising
 
+tab_warm_socialising_loss<- here_read("tab_warm_socialising_loss")
+group_tab_warm_socialising_loss<- here_read("group_tab_warm_socialising_loss")
+plot_warm_socialising_loss <- margot_plot(
+  group_tab_warm_warm_socialising_loss,
+  type = "RD",
+  title = "Socialing effect on prejudice/acceptance",
+  subtitle = "Any socialising lost",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
 
-# socialising
+plot_warm_socialising_loss
+
+ggsave(
+  plot_warm_socialising_loss,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_warm_socialising_loss.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+
+
+### LOSS SOCIALISING PREJUDICE
+tab_warm_socialising_loss<- here_read("tab_warm_socialising_loss")
+group_tab_warm_socialising_loss<- here_read("group_tab_warm_socialising_loss")
+plot_warm_socialising_loss <- margot_plot(
+  group_tab_warm_socialising_loss,
+  type = "RD",
+  title = "Socialing effect on prejudice/acceptance",
+  subtitle = "Any socialising lost",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_warm_socialising_loss
+
+ggsave(
+  plot_warm_socialising_loss,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_warm_socialising_loss.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+
+# SOCIALISING HELP RECEIVED
 
 tab_socialising_help_received<- here_read("tab_socialising_help_received")
 
@@ -440,19 +877,11 @@ plot_socialising_help_recieved <- margot_plot(
 
 ### COMPARE LOSSES
 
-
-# table loss church prosocial
-tab_compare_church_LOSS_prosocial_behaviour_raw<- here_read("tab_compare_church_LOSS_prosocial_behaviour_raw")
-
-
-tab_compare_church_LOSS_prosocial_behaviour_raw
-
 # table loss socialising prosocial
-tab_socializing_prosocial_behaviour_LOSS_raw<- here_read("tab_socializing_prosocial_behaviour_LOSS_raw")
+tab_contrast_socialising_on_donate_loss_raw<- here_read("tab_contrast_socialising_on_donate_loss_raw")
 
 # table loss socialising
-tab_socializing_prosocial_behaviour_LOSS_raw
-
+tab_contrast_socialising_on_donate_loss_raw
 
 # gains were for CHURCH
 tab_compare_church_prosocial_behaviour_raw <- here_read("tab_compare_church_prosocial_behaviour_raw")
@@ -463,6 +892,127 @@ tab_socializing_prosocial_behaviour_raw<- here_read("tab_socializing_prosocial_b
 tab_socializing_prosocial_behaviour_raw
 
 
+# USE THIS
+tab_socializing_prosocial_behaviour_z<- here_read("tab_socializing_prosocial_behaviour_z")
+group_tab_socializing_prosocial_behaviour_z<- here_read("group_tab_socializing_prosocial_behaviour_z")
+
+plot_socializing_prosocial<- margot_plot(
+  group_tab_socializing_prosocial_behaviour_z,
+  type = "RD",
+  title = "Socialising effect on charity",
+  subtitle = ">= 1.4  x weekly hours socialising",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_socializing_prosocial
+
+
+ggsave(
+  plot_behaviour_socialising,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_charity_time.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+
+
+### LOSS SOCIALISING ON HELP RECEIVED
+
+# loss
+
+tab_socializing_prosocial_behaviour_loss_z<- here_read("tab_socializing_prosocial_behaviour_loss_z")
+group_tab_socializing_prosocial_behaviour_loss_z<- here_read("group_tab_socializing_prosocial_behaviour_loss_z")
+
+plot_socializing_prosocial_loss_z<- margot_plot(
+  group_tab_socializing_prosocial_behaviour_loss_z,
+  type = "RD",
+  title = "Socialising effect on charity",
+  subtitle = "any community socialising lost",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_socializing_prosocial_loss_z
+
+
+ggsave(
+  plot_behaviour_socialising_loss_z,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_charity_time_loss_z.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
+
+
+
+### SOCIALISING LOSS HELP RECEIVED MODELS 
+
+tab_socialising_help_received_loss<- here_read("tab_socialising_help_received_loss")
+group_tab_socialising_help_received_loss <- here_read("group_tab_socialising_help_received_loss")
+
+plot_help_time_loss <- margot_plot(
+  group_tab_socialising_help_received_loss,
+  type = "RR",
+  title = "Socialising effect on help recieved",
+  subtitle = "any community socialising lost",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = 0,
+  x_lim_lo = 0,
+  x_lim_hi =  2
+)
+
+plot_help_time_loss
+ggsave(
+  plot_help_time_loss,
+  path = here::here(here::here(push_mods, "figs")),
+  width = 8,
+  height = 6,
+  units = "in",
+  filename = "plot_help_time_loss.png",
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600
+)
 
 
 # plot_socialising_help_recieved
@@ -759,7 +1309,7 @@ We assessed well-being following @vanderweele2020 outcome-wide template. Outcome
 : Transition matrix for change in religious service attendance from baseline to the exposure wave {#tbl-transition}
 
 
-@tbl-transition-2 presents a summary of those movements at the boundary of weekly religious service. 28,510 participants attended religious service less than four times per-week in both the baseline wave (NZAVS time 10) and the exposure wave (NAVS time 11); 2143 attending at least weekly in both waves. Of those who did not attend at least least weekly at baseline, 631 initiated attendance. Of those who attended at least weekly 774 attended less than weekly. This table is merely to summarise the movements presented in @tbl-transition.  An advantage of a shift intervention is flexibility in imagined intervention. We do not require, for example that the entire population shifts to for example exactly 1 x weekly service attendance, and alternatively that the entire population shifts to exactly zero religious service attendance. Rather we compare a shift intervention in which people attend at least weekly perhaps attending more if that is their natural level attendance, against an intervention in which people attend at the natural level at which they are already attending.  Hence, @tbl-transition-2 is for illustration.
+@tbl-transition-2 presents a summary of those movements at the boundary of weekly religious service. 28,510 participants attended religious service less than four times per-week in both the baseline wave (NZAVS time 10) and the exposure wave (NAVS time 11); 2143 attending at least weekly in both waves. Of those who did not attend at least least weekly at baseline, 631 initiated attendance. Of those who attended at least weekly 774 attended less than weekly. This table is merely to summarise the movements presented in @tbl-transition.  An advantage of a shift intervention is flexibility in imagined intervention. We do not require, for example that the entire population shifts to for example exactly 1 x weekly religious service attendance, and alternatively that the entire population shifts to exactly zero religious service attendance. Rather we compare a shift intervention in which people attend at least weekly perhaps attending more if that is their natural level attendance, against an intervention in which people attend at the natural level at which they are already attending.  Hence, @tbl-transition-2 is for illustration.
 
 
 |   From    | < weekly  | >= weekly |
@@ -793,7 +1343,7 @@ plot_church_prosocial <- margot_plot(
   group_tab_compare_church_prosocial_behaviour_z,
   type = "RD",
   title = "Religious service effect on reported donations and volunteering: z-transformed outcomes",
-  subtitle = ">= 1 x weekly service attendance",
+  subtitle = ">= 1 x weekly religious service attendance",
   xlab = "",
   ylab = "",
   estimate_scale = 1,
@@ -866,7 +1416,7 @@ plot_church_prejudice<- margot_plot(
   group_tab_compare_church_prejudice_z,
   type = "RD",
   title = "Religious service effect on minority-group attitudes",
-  subtitle = ">= 1 x weekly service attendance",
+  subtitle = ">= 1 x weekly religious service attendance",
   xlab = "",
   ylab = "",
   estimate_scale = 1,
